objects/Showing__c.object
<CustomObject>
    <description>The playing of a Feature in a Theatre</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Feature__c</referenceTo>
        <relationshipLabel>Showings</relationshipLabel>
        <relationshipName>Showings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Genre__c</fullName>
        <label>Primary Genre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Number__c</fullName>
        <label>Screen Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets_Sold__c</fullName>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Showing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Screen_Number__c</columns>
        <columns>Feature__c</columns>
        <columns>Tickets_Sold__c</columns>
        <columns>Primary_Genre__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Showing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Release_Date_Greater_Than_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Feature__r.Release_Date__c &gt; Date__c</errorConditionFormula>
        <errorDisplayField>Feature__c</errorDisplayField>
        <errorMessage>You cannot schedule a Feature to show prior to its Release Date</errorMessage>
    </validationRules>
</CustomObject>